# cwinapi

./: .gitmodules  CMakeLists.txt
include/cwinapi/: winallocator.h  winerror.h  winfile.h  winhandle.h
include/cwinapi/cwinapi_internal/: compilers.h
include/cwinapi/olecom/: allocator.h
include/win32/: errors.h  processes.h  utf_cvt.h
src/: .gdb_history  CMakeLists.txt  win32_allocators.c  winerror.c  winfile.c  winhandle.c
test/: CMakeLists.txt  io_behavior_test.c
toolchains/: llvm-mingw-aarch64.cmake  llvm-mingw-x86_64.cmake  mingw-i686.cmake  mingw-x86_64.cmake
